fix flex-nowrap

--- a/mixins/flex-box.less
+++ b/mixins/flex-box.less
@@ -14,7 +14,7 @@
 	flex-wrap: wrap;
 }
 
-.flex-wrap(){
+.flex-nowrap(){
 	flex-wrap: nowrap;
 }
 
